--- a/src/linux-display/Cargo.toml
+++ b/src/linux-display/Cargo.toml
@@ -18,3 +18,4 @@ simple_logger = "1.6.0"
 image = "0.23.3"
 glium = "0.24"
 winit = "0.19"
+telemetry = { path = "../software/telemetry", features = ["env_logger"], version = "0.1" }
